# all-the-reviews-in-the-world

./: README.md
client/: .env  README.md  package-lock.json  package.json  tailwind.config.js
client/src/: App.js  index.css  index.js
client/src/api/: axios.js
client/src/components/: PersistLogin.js
client/src/components/blog/: BlogCard.js  BlogCategories.js  BlogCreate.js  BlogDetail.js  BlogList.js  BlogListSearch.js  CategoryBlogList.js
client/src/components/loaders/: Loading.js
client/src/hooks/: useAuth.js  useAxiosPrivate.js  useLogout.js  useRefreshToken.js  useUser.js
client/src/middleware/: Auth.js
client/src/pages/: Home.js
client/src/pagination/: CategoryPagination.js  SmallPagination.js
client/src/store/: authContext.js  store.js
server/: db.sqlite3  pyproject.toml
server/account/: admin.py  exceprions.py  models.py  serializers.py  urls.py  views.py
server/account/migrations/: 0001_initial.py  0002_follow.py
server/category/: models.py  serializers.py
server/category/migrations/: 0001_initial.py
server/comment/: models.py
server/comment/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/post/: models.py  serializers.py  urls.py  utils.py  views.py
server/post/migrations/: 0001_initial.py  0002_rename_categories_post_category.py
server/user_profile/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
server/user_profile/migrations/: 0001_initial.py  0002_alter_profile_options_remove_profile_bio_and_more.py  0003_profile_bio_profile_image_alter_profile_follows.py
(+13 files in other folders)
